<resources>
    <string name="app_name">Poet Pal</string>
    <string name="home">Home</string>
    <string name="write">Write</string>
    <string name="read">Read</string>
    <string name="dict">Rhyming Dictionary</string>
</resources>